[metadata]
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

testing =
    pytest
    tox
    flake8
    black
    mypy

